--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,7 @@ body *, body *::after, body *::before {
     flex-direction: column;
     padding: 3.1rem .7rem;
     overflow-y: auto;
+    align-items: flex-end;
 }
 
 .input {
@@ -51,4 +52,45 @@ body *, body *::after, body *::before {
 
 .input button {
     flex: 0 1;
+}
+
+.message-group {
+    margin-bottom: .6rem;
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.message-group .message:first-child {
+    border-radius: 20px 20px 4px 20px !important;
+}
+
+.message-group .message:last-child {
+    border-radius: 20px 4px 20px 20px;
+}
+
+.message {
+    background-color: lightblue;
+    border-radius: 20px 4px 4px 20px;
+    padding: .5rem .7rem 1.5rem .7rem;
+    margin-bottom: .2rem;
+    position: relative;
+}
+
+.message .text {
+    padding: 0;
+    margin: 0;
+    text-align: right;
+}
+
+.message .time {
+    padding: 0;
+    margin: 0;
+    color: darkgray;
+    text-align: right;
+    font-size: .8rem;
+    position: absolute;
+    bottom: .3rem;
+    right: .8rem;
 }
